# wallow

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh.md  install.sh  release.toml  wallow.schema.json
.github/workflows/: release.yml
assets/: config.toml
locales/: en.yml  zh-CN.yml
src/: cli.rs  config.rs  gowall.rs  main.rs  setter.rs  source.rs  wallhaven.rs
src/source/: mod.rs  unsplash.rs  wallhaven.rs
